r273 (10. 11. 2024):
Added option "Show Convert's Health in Tracker"
Fixed Turret icon
Fixed a case where Pager Counter Tracker could be inaccurate in Crime Spree (client only)
Captain Spawn Chance Tracker: Enabled for clients; requires EHI Host to function

r272 (07. 11. 2024):
Updated pager icon
Fixed bag icon in achievements in Crime Spree
Crime Spree: Added tracker for civilian kills that will raise an alarm
Crime Spree: Added buffs for Gage Boosts
Escape Chance Tracker: Disabled in Crime Spree

r271 (03. 11. 2024):
Buffs: Reduced memory consumption by removing unused panel
Trackers: Animation optimization when background is disabled
Cook Off / Rats Day 1: Fixed sniper tracker blinking continuously red

r270 (01. 11. 2024):
Reorganized code in waypoints to allow changing time

r269 (29. 10. 2024):
Assault Tracker: Host will sync current assault data to clients after endless assault has ended
Armor Buff: Fixed an issue where the buff does not update properly after passive armor regen
Hotline Miami Day 1: Fixed an issue in Loot Counter where random maximum count could get stuck

r268 (25. 10. 2024):
Fixed misaligned trackers

r267 (24. 10. 2024):
Added options "Drill/Saw Not Powered", "Show uses left for Ammo Bags", "Show uses left for Doctor Bags", "Show uses left for Bodybag Bags" and "Show uses left for Grenade cases"
Improved timer grouping if tracker alignment is set to horizontal and timer grouping is enabled, to preserve space
Removed option "Show Endless Assault in the Tracker", EHI will show endless assault by default
Armored Transports: Improved random loot detection in deposit boxes

r266 (10. 10. 2024):
Aggregated Health Equipment Tracker: Fixed a gap if icons are on the left side

r265 (08. 10. 2024):
Buffs: Fixed a crash on alarm
First World Bank: Fixed a load crash

r264 (07. 10. 2024):
Added proper support for Vanilla Holdout levels
Fixed Tag Team buffs not working correctly on clients
Fixed position issues in Tracker Description